@@ -1,7 +1,14 @@
+2011-01-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/zzz.R (.onLoad): import module, construct from class 'date'
+	* demo/RcppBDT.R: adjusted accordingly
+
+	* cleanup: added simple cleanup script
+
 2011-01-11  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version): bumped version to 0.0.3
-	
+
 	* R/zzz.R: change initialization after borrowing a better approach
 	from John's wls package in the Rcpp repo on R-Forge: now 'bdt' is
 	the default instance of the reference class, and the module code is
